--- a/posts/1.2.llm_intro.md
+++ b/posts/1.2.llm_intro.md
@@ -4284,6 +4284,9 @@ QwenLong-L1：
 
 [https://bigeagle.me/2025/07/kimi-k2/](https://bigeagle.me/2025/07/kimi-k2/)
 
+[Kimi K2官方技术报告出炉：采用384个专家，训练不靠刷题靠“用自己的话再讲一遍”](https://mp.weixin.qq.com/s/7ybn0PadgJCkUDFvCedm1Q)
+
+[https://github.com/MoonshotAI/Kimi-K2/blob/main/tech_report.pdf](https://github.com/MoonshotAI/Kimi-K2/blob/main/tech_report.pdf)，下载了[一份](https://github.com/daiwk/collections/blob/master/assets/k2_tech_report.pdf)
 
 参考：[https://aider.chat/](https://aider.chat/)，[https://github.com/CharlesQ9/Alita](https://github.com/CharlesQ9/Alita)
 
@@ -4350,15 +4353,13 @@ $$
 
 详见苏剑林的博客：[QK-Clip：让Muon在Scaleup之路上更进一步](https://kexue.fm/archives/11126)
 
-### Agentic能力
-
-+ 大规模Agentic Tool Use数据合成
+### Agentic能力：大规模Agentic Tool Use数据合成
 
 参考ACEBench，开发了一个pipeline，可以大规模模拟真实世界的工具使用场景。覆盖数百领域、数千工具（包括MCP）。所有任务都基于评分标准（rubric），agent和user agent还有环境（工具模拟器）进行交互，通过llm进行judge，最终筛选出一个高质量的数据集。
 
 ![](../assets/k2-agentic-data-synthesis.png)
 
-+ 通用强化学习
+### Agentic能力：通用强化学习
 
 可验证任务的如数学和编程竞赛，而撰写研究报告则是不可验证的任务。这个通用强化学习系统还采用自我判断(self-judging)机制，让模型充当自身的critic，为不可验证任务提供可扩展的、基于评分标准(rubric)的反馈。
 
