--- a/posts/1.7.llm_recommend.md
+++ b/posts/1.7.llm_recommend.md
@@ -1066,6 +1066,79 @@ infer：
 + 图构建：将每个SID的64个token的embedding通过mean/max pooling成一个语义embedding。使用faiss存储这些embedding，并为每个语义ID搜索top-k个最相似的SID，作为图的边，构建一个的解码图。
 + 迭代图传播：随机初始化b个SID beam，从这b个节点出发，沿图传播，从相邻的SID里保留得分最高的b个ID。迭代q次，生成最终的top-K推荐列表。
 
+## 阿里的GPSD（落地）
+
+[Scaling Transformers for Discriminative Recommendation via Generative Pretraining](https://arxiv.org/pdf/2506.03699)
+
++ 生成式预训练：基于用户行为序列进行自回归生成训练，预测下一个item。
++ 判别式训练：使用上面训练的Transformer，除了用户行为序列和target item之外，还输入其他特征，输出正常的分类概率。
+
+提出五种参数转移策略：
+
++ no transfer（NT）：从头训练，作为基线。
++ full transfer（FT）：转移所有参数（sparse+dense）。
++ sparse transfer（ST）：仅转移sparse
++ FT&SF：转移所有参数，冻结sparse。
++ ST&SF：转移并冻结sparse。
+
+![](../assets/gpsd.png)
+
+实验发现ST&SF和FT&SF效果最好，上线时用的是ST&SF，可以理解为只是用生成式来训了一下sparse emb，然后freeze住
+
+不过落地的场景比较小
+
+## Pinterest的PinRec（落地）
+
+[PinRec: Outcome-Conditioned, Multi-Token Generative Retrieval for Industry-Scale Recommendation Systems](https://arxiv.org/pdf/2504.1050)
+
+
+
+## Pinterest的PinFM（落地）
+
+[推荐算法(2025.7.19)：Pinterest出品必是精品——GPT建模行为序列](https://mp.weixin.qq.com/s/APOHCngQR5Dt_o4rNCCMbg)
+
+[PinFM: Foundation Model for User Activity Sequences at a Billion-scale Visual Discovery Platform](https://arxiv.org/pdf/2507.12704)
+
+
+![](../assets/pinfm.png)
+
+### 预训练
+
+两年用户数据，序列最长16k，切成多个小段，每段长度$$L$$是几百。模型用的是带pre-ln的gpt2(decoder only)，也试过hstu，效果类似，基于info-nce设计了3个loss
+
++ ntl（Next Token Loss）：下一个正样本
++ mtl（Multi-Token Loss）：未来$$L'$$个正样本
++ ftl（Future-Token Loss）：最终要用到下游任务里，但那些任务的序列的长度$$L_d$$较短，所以从第$$L_d$$个开始预测mtl
+
+### 微调
+
+有2种融合方式：
+
++ late fusion：基于用户历史序列产出用户emb，和其他特征一起输入精排
++ early fusion：将候选item加到用户序列里，实时产出用户emb，再和其他特征一起输入精排（采用这种方案）
+
+一些技巧：
+
++ 微调时除了精排的二分类loss，可以加入ntl和mtl辅助loss
++ 把pretrain部分（user序列）的学习率设置为精排的1/10，以保留预训练知识。
++ pretrain部分的输出同样接了网络预估精排目标，这个logit和正常精排的logit算mse来对齐
+
+冷启item优化：
+
++ 10%的概率针对候选item随机选一个id
++ 如果item是最近x天的item，pretrain部分的输出加上dropout
+
+### serving
+
+DCA(Deduplicated Cross-Attention Transformer)：user的历史序列当成context，把每层的kv cache存起来，然后和候选item算cross attention就行了。这里的去重是batch维度的，即一个batch里会有不少同一user的相同序列，只保留一份去算kv cache，然后再还原回去，每条instance去算cross attn。serving时可以理解为就是broadcast
+
+用torchrec来实现分布式的emb table，每个item对应256维emb，拆成8个子向量，每个32dim。用FBGEMM的n-bit min-max量化算子，并加上了ptq量化，把32dim的fp16量化成了32个int8/int4+1个fp16的scale value + 1个fp16的bias value。在int4的情况下，每个vec从512bit压缩到了160bit，降低了31.25%的emb table。
+
+![](../assets/pinfm-serving.png)
+
+
+
+
 # LLM+推荐：输入文本
 
 ## 华为的KAR（落地）
@@ -2453,68 +2526,6 @@ $$
 + 首个短视频平台劣质内容判别基准测试：面向快手生态构建了短视频劣质内容分类体系，形式化定义了短视频内容判别任务，并基于真实场景中的用户反馈构建了首个短视频劣质内容判别基准测试。KuaiMod劣质内容分类体系包含4种主要的劣质类别以及15种细粒度劣质类别。基准测试包含1000条短视频样本，涵盖 15种细粒度劣质类别，完全由人工标注，并经过多轮数据清洗以保证正确性。
 + 首个工业级自动化内容判别解决方案：KuaiMod是首个在工业场景下验证了部署价值的自动化内容质量判别解决方案，在快手平台多个场景下的部署结果表明，KuaiMod方案具有能够与人工判别相媲美的准确率。
 + 基于用户反馈的强化学习训练+更新策略：区别于静态的规则或内容判别API，基于判例的劣质内容建模使得KuaiMod可以通过迭代训练数据完成判别策略的更新。为了保证实时性和准确率，我们设计了基于用户反馈的强化学习范式，利用用户的线上反馈构造新的训练数据，实现线上判别服务的天级更新。
-
-## GPSD
-
-[Scaling Transformers for Discriminative Recommendation via Generative Pretraining](https://arxiv.org/pdf/2506.03699)
-
-+ 生成式预训练：基于用户行为序列进行自回归生成训练，预测下一个item。
-+ 判别式训练：使用上面训练的Transformer，除了用户行为序列和target item之外，还输入其他特征，输出正常的分类概率。
-
-提出五种参数转移策略：
-
-+ no transfer（NT）：从头训练，作为基线。
-+ full transfer（FT）：转移所有参数（sparse+dense）。
-+ sparse transfer（ST）：仅转移sparse
-+ FT&SF：转移所有参数，冻结sparse。
-+ ST&SF：转移并冻结sparse。
-
-![](../assets/gpsd.png)
-
-实验发现ST&SF和FT&SF效果最好，上线时用的是ST&SF，可以理解为只是用生成式来训了一下sparse emb，然后freeze住
-
-## PinFM
-
-[推荐算法(2025.7.19)：Pinterest出品必是精品——GPT建模行为序列](https://mp.weixin.qq.com/s/APOHCngQR5Dt_o4rNCCMbg)
-
-[PinFM: Foundation Model for User Activity Sequences at a Billion-scale Visual Discovery Platform](https://arxiv.org/pdf/2507.12704)
-
-
-![](../assets/pinfm.png)
-
-### 预训练
-
-两年用户数据，序列最长16k，切成多个小段，每段长度$$L$$是几百。模型用的是带pre-ln的gpt2(decoder only)，也试过hstu，效果类似，基于info-nce设计了3个loss
-
-+ ntl（Next Token Loss）：下一个正样本
-+ mtl（Multi-Token Loss）：未来$$L'$$个正样本
-+ ftl（Future-Token Loss）：最终要用到下游任务里，但那些任务的序列的长度$$L_d$$较短，所以从第$$L_d$$个开始预测mtl
-
-### 微调
-
-有2种融合方式：
-
-+ late fusion：基于用户历史序列产出用户emb，和其他特征一起输入精排
-+ early fusion：将候选item加到用户序列里，实时产出用户emb，再和其他特征一起输入精排（采用这种方案）
-
-一些技巧：
-
-+ 微调时除了精排的二分类loss，可以加入ntl和mtl辅助loss
-+ 把pretrain部分（user序列）的学习率设置为精排的1/10，以保留预训练知识。
-+ pretrain部分的输出同样接了网络预估精排目标，这个logit和正常精排的logit算mse来对齐
-
-冷启item优化：
-
-+ 10%的概率针对候选item随机选一个id
-+ 如果item是最近x天的item，pretrain部分的输出加上dropout
-
-### serving
-
-DCA(Deduplicated Cross-Attention Transformer)：user的历史序列当成context，把每层的kv cache存起来，然后和候选item算cross attention就行了。这里的去重是batch维度的，即一个batch里会有不少同一user的相同序列，只保留一份去算kv cache，然后再还原回去，每条instance去算cross attn。serving时可以理解为就是broadcast
-
-用torchrec来实现分布式的emb table，每个item对应256维emb，拆成8个子向量，每个32dim。用FBGEMM的n-bit min-max量化算子，并加上了ptq量化，把32dim的fp16量化成了32个int8/int4+1个fp16的scale value + 1个fp16的bias value。在int4的情况下，每个vec从512bit压缩到了160bit，降低了31.25%的emb table。
-
-![](../assets/pinfm-serving.png)
 
 ## GAVE
 
