--- a/posts/1.2.llm_intro.md
+++ b/posts/1.2.llm_intro.md
@@ -4789,3 +4789,17 @@ DGM利用达尔文进化等开放式算法的原理，逐步构建起一个**不
         + 反向：routing的输出p处理一下得到c（如果是边界那就是p，不是边界就用1-p，所以图中c和p有的一样，有的是“互补”的），和soomthing的输出z来相乘，其实就是保证有连续的梯度
 
 ![](../assets/hnet-upsampler.png)
+
+
+## MTP改造
+
+[Your LLM Knows the Future: Uncovering Its Multi-Token Prediction Potential](https://arxiv.org/pdf/2507.11851)
+
+![](../assets/know-future-1.png)
+
++ 原来的llm，ntp的话，如果在assistant后面给出4个placeholder(图中的```<->```)，其实能在top200里找得到最终答案，说明模型隐式地知道未来
++ 通过mask来finetue一个mtp的版本，能在top10里找到答案
++ 再加一个sampler能进一步提升
+
+
+
