--- a/posts/1.7.llm_recommend.md
+++ b/posts/1.7.llm_recommend.md
@@ -3252,4 +3252,18 @@ serving：2个head分别建索引，在线同一个trigger分别从这2个索引
 最终是在淘宝秒杀app上的，有一些收益
 论文中短序列最多100，不过作者没有说长序列有多长
 
+## Meta的CABB建模
 
+[Click A, Buy B: Rethinking Conversion Attribution in E-Commerce Recommendations](https://arxiv.org/pdf/2507.15113)
+
+在同一个session内，CABA：click A buy A；CABB：click A buy B
+
+![](../assets/cabb.png)
+
+正常的模型建模的是CABA，如图，加一个tower，建模CABB（点了A，但是买了别的东西），同时加上A和B的相似度来给loss加权（那些差得很远的就当成是噪音），其中相似度的逻辑：
+
++ 统计不同叶子类目在同一session里的共现信息
++ 用传统的item-cf方法作用到叶子类目粒度，即每个叶子类目有一个长度为user数的向量，每个元素是用户对这个类目的加权求和($$w_1\times 购买数+w_2\times 加入购物车次数+w_3\times 点击次数+ ...$$)
++ 不同类目的向量算cos，但因为每个数都是正的，所以算出来的cos是0到1之间，这个就是上面用到的相似度
+
+另外看图里是这两个目标加权得到输出，去和一个ad conversion label算loss，这个label感觉应该是session内是否购买吧
