--- a/posts/1.2.llm_intro.md
+++ b/posts/1.2.llm_intro.md
@@ -4820,5 +4820,5 @@ DGM利用达尔文进化等开放式算法的原理，逐步构建起一个**不
 
 一致性loss：如图，m1其实是模拟的x1，所以他的输出也要和x1的输出去对齐，m2同理
 
-其中的随机采样细节看着有点复杂，还要再看下论文
+其中的投机采样细节看着有点复杂，还要再看下论文
 
