--- a/posts/1.7.llm_recommend.md
+++ b/posts/1.7.llm_recommend.md
@@ -2368,7 +2368,7 @@ infer照理说应该是得到emb，然后去ann，但代码里偷懒了直接拿
 + 推荐模型的学习：一个正常的transformer-based模型(本文用的T5-small)，预测下一个sid
 + domain-specific的微调：每个domain加一个小矩阵，该domain的数据只用lora训对应的那个小矩阵
 
-## guided embedding
+## guided embedding（学术界）
 
 [Improving LLM Interpretability and Performance via Guided Embedding Refinement for Sequential Recommendation](https://arxiv.org/pdf/2504.11658)
 
