--- a/posts/1.5.llm_alignment.md
+++ b/posts/1.5.llm_alignment.md
@@ -942,3 +942,9 @@ Self-Principled Critique Tuning (SPCT)
 
 [万字干货：小红书 hi lab 团队关于奖励模型的一些探索](https://mp.weixin.qq.com/s/3UadDLhVdQQFh8VCyLJpuw)
 
+## PRMBench
+
+[ACL 2025｜驱动LLM强大的过程级奖励模型（PRMs）正遭遇「信任危机」？](https://mp.weixin.qq.com/s/O7Him3RNXO1xEsbUiZML9Q?scene=1)
+
+[PRMBench: A Fine-grained and Challenging Benchmark for Process-Level Reward Models](https://arxiv.org/abs/2501.03124)
+
