--- a/posts/1.2.llm_intro.md
+++ b/posts/1.2.llm_intro.md
@@ -4822,3 +4822,10 @@ DGM利用达尔文进化等开放式算法的原理，逐步构建起一个**不
 
 其中的投机采样细节看着有点复杂，还要再看下论文
 
+## context engineering
+
+[季逸超亲述Manus构建之谜，一文读懂AI智能体的上下文工程](https://mp.weixin.qq.com/s/vbf9_4xorAGTu5nuExk9jA?scene=1)
+
+[囊括1400+论文！大语言模型上下文工程全面综述：框架、系统与挑战](https://mp.weixin.qq.com/s/625oe8K3gZrbtMrZgbHe7w)
+
+
