--- a/posts/1.7.llm_recommend.md
+++ b/posts/1.7.llm_recommend.md
@@ -1166,11 +1166,19 @@ DCA(Deduplicated Cross-Attention Transformer)：user的历史序列当成context
 
 ![](../assets/pinfm-serving.png)
 
-## Yandex的1B模型
+## Yandex的ARGUS（落地）
 
 [Scaling Recommender Transformers to One Billion Parameters](https://www.arxiv.org/pdf/2507.15994)
 
 Yandex的音乐推荐场景
+
+## 美团的NLGR（落地）
+
+生成式重排
+
+[NLGR: Utilizing Neighbor Lists for Generative Rerank in Personalized Recommendation Systems](https://arxiv.org/pdf/2502.06097)
+
+将邻居候选列表引入生成式reranking框架，结合evaluator‑generator策略和非自回归采样机制，使reranker可跳跃组合优化。
 
 # LLM+推荐：输入文本
 
