--- a/posts/1.7.llm_recommend.md
+++ b/posts/1.7.llm_recommend.md
@@ -1691,7 +1691,7 @@ item侧也复用了类似的流程，把输入的(hist, item)改成(item, pos, n
 
 推理：
 
-+ 迭代优化：通过actor产出知识(即reasoning），然后让reflection模型给出reflect，再refine，直到产出靠谱知识
++ 迭代优化：通过actor产出知识(即reasoning)，然后让reflection模型给出reflect，再refine，直到产出靠谱知识
 + 过滤：actor并行产出多个知识，reflection模型过滤掉很不靠谱的，剩下的知识对应的向量取平均
 
 在线使用：通过actor生成user和item的知识，然后用bge-m3产出向量给推荐模型用
