--- a/posts/1.7.llm_recommend.md
+++ b/posts/1.7.llm_recommend.md
@@ -1172,6 +1172,11 @@ DCA(Deduplicated Cross-Attention Transformer)：user的历史序列当成context
 
 Yandex的音乐推荐场景
 
+![](../assets/argus-pretrain.png)
+
+
+![](../assets/argus-finetune.png)
+
 ## 美团的NLGR（落地）
 
 生成式重排
