--- a/posts/1.7.llm_recommend.md
+++ b/posts/1.7.llm_recommend.md
@@ -1713,7 +1713,49 @@ item侧也复用了类似的流程，把输入的(hist, item)改成(item, pos, n
 
 [搜广推工业界论文每日速递-20250731-阿里RecGPT: 淘宝首猜全量上线](https://mp.weixin.qq.com/s/hrxoPwbw8OErX3XompmAZQ)
 
+![](../assets/recgpt.png)
 
+4步：
+
++ 用户兴趣挖掘：输入用户人口属性和历史序列，总结出用户的兴趣(从给定的兴趣集合里选出match的，并给出原因)。用TBStars-MoE-42B-A3.5B进行sft。
++ item tag预测：输入用户人口属性和历史序列，加上总结的用户兴趣，输出用户可能感兴趣的50个item tag（看着是一个形容词+名词的短语），及对应原因。用TBStars-MoE-42B-A3.5B进行sft。
++ item检索：user-tag-item 3塔模型，拿正常推荐行为训练，最终logit融合了tag-user和user-item的logit
++ 推荐理由生成：输入user兴趣、item信息，输出推荐理由。用Qwen3-14B进行sft。用一个pretrain好的模型把item tag映射到类目，而每个类目下有一些item，最终离线产出一个离线词表，每个tag只要存它对应的那个tag下的item的理由就行了。
+
+![](../assets/recgpt-user-mining.png)
+
+左边大概就是对一个用户的行为进行压缩，即
+
++ item压缩：每个item只保留必要信息，例如name/cate/brand等
++ 序列压缩：先按时间窗口聚合，再按item（感觉应该是类目粒度吧）频次倒排聚合
+
+右边是3阶段的训练
+
++ 基于课程学习的多任务finetune：简单->中等->复杂，搞了16.3k的样本，让模型学习电商知识
++ reasoning-enhanced pre-alignment：用deepseek-r1产出了用户兴趣挖掘的90k推理数据，并通过人工筛选出19k高质量数据进行蒸馏。
++ self-training evolution：模型自己生成数据，并结合人工和llm-as-a-judge进行迭代优化，共21.1k高质量数据，如下图
+
+![](../assets/recgpt-human-llm.png)
+
+![](../assets/recgpt-item-tag-pred.png)
+
+item tag预测也包括两阶段：
+
++ alignment：就是用户兴趣挖掘的后两步，只是换了一下筛选数据的标准
++ 增量学习：双周更新一次，拿最近14天的数据，用QwQ-32B产出数据，并考虑类目间的数据量平衡(每个类目的数据量差不多)
+
+![](../assets/recgpt-item-retrieval.png)
+
+user/item都是正常的推荐模型，有id特征、序列特征等，tag塔就是预测出的item tag（前面提到了tag可以映射到类目，所以这里就是item对应的tag）切词后丢进去，3个loss：
+
++ u-i的推荐行为loss
++ tag和i之间的loss，正样本是点击item的tag，负样本是随机一个item的tag
++ 类目对比学习loss，同类目的tag是正样本，不同类目的tag是负的
+
+![](../assets/recgpt-explanation.png)
+
++ alignment：同上，改了筛选标准
++ 离线生产：如上所述，产出interest-item-理由离线表
 
 
 ## 蚂蚁的SLIM（没落地）
