--- a/posts/1.2.llm_intro.md
+++ b/posts/1.2.llm_intro.md
@@ -4834,4 +4834,4 @@ DGM利用达尔文进化等开放式算法的原理，逐步构建起一个**不
 
 [囊括1400+论文！大语言模型上下文工程全面综述：框架、系统与挑战](https://mp.weixin.qq.com/s/625oe8K3gZrbtMrZgbHe7w)
 
-
+[A Survey of Context Engineering for Large Language Models](https://arxiv.org/abs/2507.13334)
