--- a/posts/1.7.llm_recommend.md
+++ b/posts/1.7.llm_recommend.md
@@ -1191,6 +1191,12 @@ Yandex的音乐推荐场景
 
 将邻居候选列表引入生成式reranking框架，结合evaluator‑generator策略和非自回归采样机制，使reranker可跳跃组合优化。
 
+## 美团的DFGR
+
+没落地
+
+[Action is All You Need: Dual‑Flow Generative Ranking Network for Recommendation](https://arxiv.org/pdf/2505.16752)
+
 ## SnapChat的GRID（框架）
 
 [Generative Recommendation with Semantic IDs: A Practitioner's Handbook](https://arxiv.org/pdf/2507.22224)
@@ -1756,6 +1762,12 @@ user/item都是正常的推荐模型，有id特征、序列特征等，tag塔就
 
 + alignment：同上，改了筛选标准
 + 离线生产：如上所述，产出interest-item-理由离线表
+
+
+## 美团的PIGEON（没落地）
+
+[Open‑Set Living Need Prediction with LLMs](https://arxiv.org/pdf/2506.02713)
+
 
 
 ## 蚂蚁的SLIM（没落地）
@@ -3379,7 +3391,15 @@ $$
 
 该采用由多个LLM驱动的智能体构成的模块化体系(Master、Planner、Executor和Writer)，能够动态适应从简单事实查询到复杂多阶段推理任务的各类信息需求。这些智能体通过动态协同的工作流程，评估查询复杂性，在Master的判断和指导下对应不同任务的特性的智能体动态组合，并针对复杂任务将问题分解为可执行的任务,并协调使用各种工具进行任务执行与内容合成。
 
+## 美团的IterQR
+
+[IterQR: LLM‑based Iterative Query Rewrite for E‑commerce Search](https://arxiv.org/pdf/2504.05309)
+
 # 传统推荐模型
+
+## KuaiFormer
+
+[KuaiFormer: Transformer-Based Retrieval at Kuaishou](https://arxiv.org/pdf/2411.10057)
 
 ## Pinnerformer
 
