--- a/posts/1.2.llm_intro.md
+++ b/posts/1.2.llm_intro.md
@@ -4257,6 +4257,33 @@ QwenLong-L1：
 + 采用动态分辨率训练，支持动态分辨率生成。无论是输入端还是输出端，模型都支持任意分辨率和长宽比的图像生成。这意味着用户不再受限于固定的格式，可以根据实际需求生成适配不同场景的图像内容，无论是海报、插图、网页Banner还是社交媒体封面，都能轻松应对。
 + 创新性地引入了一种全新的生成机制：从上到下、从左到右逐步清晰的生成过程。这一机制不仅提升了生成效率，还特别适用于需要精细控制的长段落文字生成任务。例如，在生成带有大量文本的广告设计或漫画分镜时，Qwen VLo逐步生成慢慢修改。这种渐进式的生成方式让用户可以实时观察生成过程，并根据需要进行调整，从而获得最佳的创作效果。
 
+## Qwen-Image
+
+[告别文字乱码！全新文生图模型Qwen-Image来咯](https://mp.weixin.qq.com/s/CdLk_CwFk5Ui-JAvHV9-8Q)
+
+[https://github.com/QwenLM/Qwen-Image](https://github.com/QwenLM/Qwen-Image)，集成在diffusers里了
+
+[Qwen-Image Technical Report](https://qianwen-res.oss-cn-beijing.aliyuncs.com/Qwen-Image/Qwen_Image.pdf)
+
+![](../assets/qwen-image-arch.png)
+
++ x1：文本经过Qwen2.5 VL得到的输出
++ x2：图片经过VAE-encoder(用Wan-2.1-VAE)得到emb，和noise以及扩散时的timestep t一起经过patchify后得到的输出
++ x3：timestep t直接过mlp得到的输出
++ x3作为gate，x1和x2双流输入一个MM-DiT，中间过程可以理解为x1和x2分别得到qkv，对应地拼在一起，过一个self-attn，再和x3乘一下，和原来的x1或者x2相加，得到新的x1和x2
+
+MM-Dit结构来自Stable Diffusion 3，即[Scaling Rectified Flow Transformers for High-Resolution Image Synthesis](https://openreview.net/pdf?id=FPnUhsQJ5B)，如下，c对应上面的x1，x对应上面的x2，y对应上面的x3
+
+![](../assets/mm-dit.png)
+
+MSRoPE如图所示，即图像的位置编码完后，沿对角线把文本的加进去
+
+![](../assets/qwen-image-msrope.png)
+
+关于汉字的渲染方面，没有像Seedream 2.0一样专门搞一个Glyph-ByT5的encoder，而是通过数据集构造来完成这一点
+
+![](../assets/seedream2.0.png)
+
 # Kimi系列
 
 ## MOBA
