--- a/posts/1.2.llm_intro.md
+++ b/posts/1.2.llm_intro.md
@@ -3223,6 +3223,33 @@ Kv caching机制：相比原始transformer都有优化
 
 ![](../assets/mor-routing-cache-compare.png)
 
+# OpenAI
+
+## GPT-OSS
+
+[https://github.com/openai/gpt-oss](https://github.com/openai/gpt-oss)
+
++ 两个模型，一个是5.1 in 117b的大模型，一个是3.6 in 21b的小模型
++ apache 2.0协议，看来可以随便用咯
++ 可以自定义reasoning的预算
++ 可finetune、有agentic能力
++ 原生用混精度fp4训练moe层
+	
+gpt_oss/torch/model.py里有naive版的torch实现，可以拿来理解模型结构
+
+教程列表：[https://cookbook.openai.com/topic/gpt-oss](https://cookbook.openai.com/topic/gpt-oss)
+
+finetune方法：[https://cookbook.openai.com/articles/gpt-oss/fine-tune-transfomers](https://cookbook.openai.com/articles/gpt-oss/fine-tune-transfomers)
+
+[model card](https://cdn.openai.com/pdf/419b6906-9da6-406c-a19d-1bb078ac7637/oai_gpt-oss_model_card.pdf)
+
+117b的配置：
+
++ sparse attn（滑动窗口是8）和full attn交替的，共32层
++ 总共128专家，每个token激活4个，这个可以自己算一下，和官方model card里的参数是可以对应上的
++ rope，并且通过yarn可以从4k外推到128k（rope_scaling的factor是32）
++ attention用的是gqa，q有64个head，kvheads是8，即分成64/8=8组，每组共享kv
+
 # Gemmini&Gemma系列
 
 ## Gemini 1.0
