--- a/posts/1.7.llm_recommend.md
+++ b/posts/1.7.llm_recommend.md
@@ -2722,6 +2722,10 @@ $$
 
 ![](../assets/sa-my-pic.png)
 
+## Foundation-Expert Paradigm
+
+[Realizing Scaling Laws in Recommender Systems: A Foundation–Expert Paradigm for Hyperscale Model Deployment](https://www.arxiv.org/pdf/2508.02929)
+
 
 ## SLMRec
 
@@ -3475,3 +3479,10 @@ serving：2个head分别建索引，在线同一个trigger分别从这2个索引
 + 不同类目的向量算cos，但因为每个数都是正的，所以算出来的cos是0到1之间，这个就是上面用到的相似度
 
 另外看图里是这两个目标加权得到输出，去和一个ad conversion label算loss，这个label感觉应该是session内是否购买吧
+
+## Google的item冷启
+
+[Item-centric Exploration for Cold Start Problem](https://arxiv.org/pdf/2507.09423)
+
+可以对比下meta在2023年的user-centric ranking：[Breaking the Curse of Quality Saturation with User-Centric Ranking](https://arxiv.org/pdf/2305.15333)
+
