--- a/posts/1.7.llm_recommend.md
+++ b/posts/1.7.llm_recommend.md
@@ -3484,5 +3484,15 @@ serving：2个head分别建索引，在线同一个trigger分别从这2个索引
 
 [Item-centric Exploration for Cold Start Problem](https://arxiv.org/pdf/2507.09423)
 
-可以对比下meta在2023年的user-centric ranking：[Breaking the Curse of Quality Saturation with User-Centric Ranking](https://arxiv.org/pdf/2305.15333)
+就是对冷启的item用beta分布(汤普森采样)去做ee。依据就是beta分布里的特点：采样出来的p，当展现很少的时候很大，即更偏向探索；展现比较多的时候，p接近于ctr，更偏向利用
 
++ alpha+点击数，beta+展现未点击数去更新
++ 采样的时候卡了一个阈值，如果$$p\left(\mathrm{~S}_{+} \mid \mathrm{u}, \mathrm{i}\right)<\mu_{\mathrm{i}}-2 \sigma_{\mathrm{i}}$$，就相当于在置信区间之外，扔掉
+
+和meta在2023年的user-centric ranking（[Breaking the Curse of Quality Saturation with User-Centric Ranking](https://arxiv.org/pdf/2305.15333)）没啥关系
+
+## CAVE
+
+[From Generation to Consumption: Personalized List Value Estimation for Re-ranking](https://arxiv.org/pdf/2508.02242)
+
+重排里的list-wise evaluator，以前是对整个list给出价值预估，现在预估了一个用户退出的概率，只对退出之前的那些item的sub list预估价值
