--- a/posts/3.llm_rec_summary.md
+++ b/posts/3.llm_rec_summary.md
@@ -17,6 +17,8 @@
 
 # 概述
 
+可以参考gpt生成的一些报告，目录[>>>](https://github.com/daiwk/collections/tree/master/deep-research-assets)
+
 大模型=大语言模型或者多模态大模型
 
 + 引入大模型的模型结构
