--- a/posts/1.7.llm_recommend.md
+++ b/posts/1.7.llm_recommend.md
@@ -1807,6 +1807,10 @@ WWW Companion 25，[Comment Staytime Prediction with LLM-enhanced Comment Unders
 
 ![](../assets/das-kuaishou.png)
 
+## 快手的KSER（没落地）
+
+[Selection and Exploitation of High-Quality Knowledge from Large Language Models for Recommendation](https://arxiv.org/pdf/2508.07223)
+
 ## 网易云音乐的LEMON（落地）
 
 KDD25，[Enhanced Emotion-aware Music Recommendation via Large Language Models](https://dl.acm.org/doi/pdf/10.1145/3711896.3737212)
