--- a/posts/1.9.llm_others.md
+++ b/posts/1.9.llm_others.md
@@ -69,6 +69,12 @@
 
 [General agents need world models](https://arxiv.org/abs/2506.01622)
 
+# 泄露的系统提示词
+
+
+
+[https://github.com/asgeirtj/system_prompts_leaks/blob/main/OpenAI/gpt-5-thinking.md](https://github.com/asgeirtj/system_prompts_leaks/blob/main/OpenAI/gpt-5-thinking.md)
+
 # 语言物理学
 
 (toread)
