--- a/posts/1.2.llm_intro.md
+++ b/posts/1.2.llm_intro.md
@@ -1896,29 +1896,6 @@ iclr23 [GLM-130B: An Open Bilingual Pre-trained Model](https://arxiv.org/a/2210.
 
 [https://github.com/showlab/computer_use_ootb](https://github.com/showlab/computer_use_ootb)
 
-### grok
-
-&nbsp;
-
-[马斯克开源Grok-1：3140亿参数迄今最大，权重架构全开放，磁力下载](https://mp.weixin.qq.com/s/hvt5zwoazDx26KOaKuTs_w)
-
-[https://github.com/xai-org/grok-1](https://github.com/xai-org/grok-1)
-
-[马斯克发布Grok 1.5！编码和数学能力大幅提升](https://mp.weixin.qq.com/s/QwM1uk61o1DMpe5EPq9giQ)
-
-+ 上下文窗口提升16倍，达到128k
-+ 不使用通用的Python语言+Pytorch框架，采用分布式训练架构，使用Rust、JAX+Kubernetes构建。
-+ 提出了自定义训练协调器，可自动检测到有问题的节点，然后剔除。
-+ 优化了checkpointing、数据加载和训练重启等流程，最大限度地减少故障停机时间。
-
-[马斯克的首款多模态大模型来了，GPT-4V又被超越了一次](https://mp.weixin.qq.com/s/2GDjZS6ctayAF8e8eFb3CQ)
-
-Grok-1.5V: [https://x.ai/blog/grok-1.5v](https://x.ai/blog/grok-1.5v)
-
-grok-2：[Grok-2来了，能生图识图、性能比肩GPT-4o，马斯克：发展猛如火箭](https://mp.weixin.qq.com/s/nBaY2srcMSzvEoecOyh1Cg)
-
-[目前对Grok 3分析最为透彻的一篇文章](https://mp.weixin.qq.com/s/h5cFZnU4T7K7YscMYc61pQ)
-
 
 ### Octopus
 
@@ -3892,6 +3869,36 @@ MobileNet-v5支持
 
 要跑gemma3n需要```pip3 install timm transformers==4.53.0```
 
+
+# Grok
+
+## grok1
+
+[马斯克开源Grok-1：3140亿参数迄今最大，权重架构全开放，磁力下载](https://mp.weixin.qq.com/s/hvt5zwoazDx26KOaKuTs_w)
+
+[https://github.com/xai-org/grok-1](https://github.com/xai-org/grok-1)
+
+[马斯克发布Grok 1.5！编码和数学能力大幅提升](https://mp.weixin.qq.com/s/QwM1uk61o1DMpe5EPq9giQ)
+
++ 上下文窗口提升16倍，达到128k
++ 不使用通用的Python语言+Pytorch框架，采用分布式训练架构，使用Rust、JAX+Kubernetes构建。
++ 提出了自定义训练协调器，可自动检测到有问题的节点，然后剔除。
++ 优化了checkpointing、数据加载和训练重启等流程，最大限度地减少故障停机时间。
+
+[马斯克的首款多模态大模型来了，GPT-4V又被超越了一次](https://mp.weixin.qq.com/s/2GDjZS6ctayAF8e8eFb3CQ)
+
+Grok-1.5V: [https://x.ai/blog/grok-1.5v](https://x.ai/blog/grok-1.5v)
+
+grok-2：[Grok-2来了，能生图识图、性能比肩GPT-4o，马斯克：发展猛如火箭](https://mp.weixin.qq.com/s/nBaY2srcMSzvEoecOyh1Cg)
+
+[目前对Grok 3分析最为透彻的一篇文章](https://mp.weixin.qq.com/s/h5cFZnU4T7K7YscMYc61pQ)
+
+## grok2.5
+
+[刚刚，马斯克开源Grok 2.5：中国公司才是xAI最大对手](https://mp.weixin.qq.com/s/SfS8ZxExG5EdJph4p8mH6A)
+
+[https://huggingface.co/xai-org/grok-2](https://huggingface.co/xai-org/grok-2)
+
 # DeepSeek系列
 
 ## DeepSeek-V2
@@ -5278,3 +5285,9 @@ DGM利用达尔文进化等开放式算法的原理，逐步构建起一个**不
 [囊括1400+论文！大语言模型上下文工程全面综述：框架、系统与挑战](https://mp.weixin.qq.com/s/625oe8K3gZrbtMrZgbHe7w)
 
 [A Survey of Context Engineering for Large Language Models](https://arxiv.org/a/2507.13334)
+
+## OaK
+
+[强化学习之父Richard Sutton最新演讲揭示OaK架构：通向超级智能的八步愿景](https://mp.weixin.qq.com/s/PVOaXQLr2rE5icesKV1Qog)
+
+
