--- a/posts/1.4.llm_sft_and_usages.md
+++ b/posts/1.4.llm_sft_and_usages.md
@@ -303,6 +303,8 @@ def replace_linear_with_dora(model):
 
 [全是细节｜大模型SFT的100个关键点](https://mp.weixin.qq.com/s/LxERqJU7mP40onJQP-6UHQ)
 
+[大模型SFT 22条实践经验，干活效率翻倍！](https://mp.weixin.qq.com/s/XgAIsVQotlf5dfUlbn1t0w)
+
 [LLM预训练与SFT数据配比调研](https://mp.weixin.qq.com/s/-J-5oHB4T4taQd0vCHhYUA)
 
 # 使用
