--- a/posts/1.7.llm_recommend.md
+++ b/posts/1.7.llm_recommend.md
@@ -3619,3 +3619,7 @@ $$
 ![](../assets/dgenctr-model.png)
 
 
+## TransAct V2
+
+[TransAct V2: Lifelong User Action Sequence Modeling on Pinterest Recommendation](https://arxiv.org/pdf/2506.02267)
+
