--- a/posts/1.7.llm_recommend.md
+++ b/posts/1.7.llm_recommend.md
@@ -1071,6 +1071,9 @@ item有各种特征，如title、img、id等
 
 [REG4Rec: Reasoning-Enhanced Generative Model for Large-Scale Recommendation Systems](https://arxiv.org/pdf/2508.15308)
 
+![](../assets/reg4rec.png)
+
+
 
 ## 快手的RecGPT
 
