--- a/posts/1.7.llm_recommend.md
+++ b/posts/1.7.llm_recommend.md
@@ -1810,6 +1810,10 @@ item侧也复用了类似的流程，把输入的(hist, item)改成(item, pos, n
 
 [TrackRec: Iterative Alternating Feedback with Chain-of-Thought via Preference Alignment for Recommendation](https://arxiv.org/abs/2508.15388)
 
+## 快手的OneSearch
+
+[OneSearch: A Preliminary Exploration of the Unified End-to-End Generative Framework for E-commerce Search](https://arxiv.org/pdf/2509.03236)
+
 
 
 ## 字节的HLLM-Creator
