--- a/posts/1.7.llm_recommend.md
+++ b/posts/1.7.llm_recommend.md
@@ -1924,6 +1924,14 @@ def get_paragraph_representation(outputs, mask, pooler='cls', dim=1):
         raise NotImplementedError
 ```
 
+## 华为的LASER
+
+[Efficiency Unleashed: Inference Acceleration for LLM-based Recommender Systems with Speculative Decoding](https://arxiv.org/pdf/2408.05676) SIGIR25
+
+![](../assets/laser.png)
+
+
+
 
 ## 小红书的NoteLLM
 
