--- a/posts/1.7.llm_recommend.md
+++ b/posts/1.7.llm_recommend.md
@@ -1237,7 +1237,9 @@ decode出来有两个东西，rq的code和dense
 + 然后每一个code和原来的seq一起输入decoder，得到的pred就是dense，再拿这个dense去ann找n个item
 + 最后对这m*n个item拿两个相似度融合出一个得分，取topk出来
 
+## 网易云音乐的Climber
 
+[Climber: Toward Efficient Scaling Laws for Large Recommendation Models](https://arxiv.org/pdf/2502.09888)
 
 ## Yandex的ARGUS
 
@@ -1566,6 +1568,12 @@ user/item都是正常的推荐模型，有id特征、序列特征等，tag塔就
 + alignment：同上，改了筛选标准
 + 离线生产：如上所述，产出interest-item-理由离线表
 
+
+## 阿里的SaviorRec
+
+[SaviorRec: Semantic-Behavior Alignment for Cold-Start Recommendation](https://arxiv.org/pdf/2508.01375)
+
+利用大型预训练多模态模型（如LLaMA、ViT、CLIP）生成语义表示，并与用户行为空间对齐，提升冷启动和长尾物品推荐性能。
 
 ## 快手的LEARN
 
@@ -1998,6 +2006,9 @@ $$
 KDD25，[Enhanced Emotion-aware Music Recommendation via Large Language Models](https://dl.acm.org/doi/pdf/10.1145/3711896.3737212)
 
 
+## 亚马逊的MarketingFM
+
+[LLMs for Customized Marketing Content Generation and Evaluation at Scale](https://arxiv.org/pdf/2506.17863)
 
 
 # LLM+推荐：输入文本（工业界+没落地）
